--- a/testhtml/test(listarconversacion).html
+++ b/testhtml/test(listarconversacion).html
@@ -27,11 +27,11 @@
       socket.emit('listar_conversaciones', data);
     });
 
-    socket.on('conversaciones_obtenidas', (data) => {
+    socket.on('conversaciones_listadas', (data) => {
       document.getElementById('output').textContent = 'Conversaciones:\n' + JSON.stringify(data, null, 2);
     });
 
-    socket.on('listar_conversaciones_error', (err) => {
+    socket.on('conversaciones_error', (err) => {
       document.getElementById('output').textContent = 'Error:\n' + JSON.stringify(err, null, 2);
     });
   </script>
